# phonova

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  bun.lockb  deny.toml  lefthook.yml  package.json  svelte.config.js  tailwind.config.ts  vite.config.js
.github/workflows/: ci.yml
apps/desktop/: package.json  vite.config.ts
apps/desktop/src/: app.css  app.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: engine_cmds.rs  lib.rs  main.rs  platform_cmds.rs  playback_cmds.rs  project_cmds.rs  state.rs
apps/ui/: README.md  package.json  tsconfig.json
apps/web/: package.json  playwright.config.ts  tsconfig.json  vite.config.ts  wrangler.jsonc
apps/web/e2e/: aiff-flac-import.spec.ts  annotation.spec.ts  command-palette.spec.ts  figure-export.spec.ts  helpers.ts  home-management.spec.ts  home-project.spec.ts  interchange.spec.ts  key-modes.spec.ts  library.spec.ts  navigation-view.spec.ts  perf-render.spec.ts  pinch-zoom.spec.ts  recording.spec.ts  selection.spec.ts  streamed-import.spec.ts  switcher.spec.ts  walking-skeleton.spec.ts
apps/web/scripts/: dedupe-head.ts  generate-assets.ts  og-image.html
apps/web/src/: app.css  app.html  worker.ts
apps/web/static/: manifest.webmanifest  recorder-worklet.js  robots.txt  sitemap.xml
crates/phonia/: Cargo.toml  README.md
crates/phonia/src/: lib.rs
crates/phx-annot/: Cargo.toml  README.md
crates/phx-annot/src/: lib.rs
crates/phx-audio/: Cargo.toml
crates/phx-audio/src/: decode.rs  lib.rs  stream.rs
crates/phx-audio/tests/: decode_aiff_flac.rs
crates/phx-audio/tests/fixtures/: MANIFEST.md  aiff_mono_16_44100.aiff  aiff_mono_16_48000.aiff  aiff_mono_24_44100.aiff  aiff_mono_24_48000.aiff  aiff_stereo_16_48000.aiff  aiff_stereo_24_44100.aiff  aiff_stereo_24_48000.aiff  flac_24bit.flac  flac_blocksize.flac  flac_level0.flac  flac_level8.flac  generate.sh
crates/phx-dsp/: Cargo.toml
crates/phx-dsp/src/: fft.rs  filter.rs  frame_grid.rs  interpolate.rs  lib.rs  preemphasis.rs  window.rs
crates/phx-engine/: Cargo.toml
crates/phx-engine/src/: commands.rs  document.rs  error.rs  figure.rs  journal.rs  lib.rs  pyramid.rs  recording.rs  store.rs  stream_pyramid.rs  tile_cache.rs
crates/phx-engine/tests/: long_file_stream.rs
crates/phx-figure/: Cargo.toml
crates/phx-figure/assets/fonts/: LICENSE-DejaVu.txt
crates/phx-figure/examples/: emit_text_exports.rs  render_reference.rs
crates/phx-figure/src/: builder.rs  lib.rs  model.rs  style.rs
crates/phx-figure/src/backends/: bundle.rs  code.rs  graphml.rs  mod.rs  pdf.rs  png.rs  svg.rs  tikz.rs  typst.rs  vega.rs
crates/phx-figure/tests/: backends.rs  text_backends.rs
crates/phx-formant/: Cargo.toml
crates/phx-formant/src/: burg.rs  lib.rs  params.rs  roots.rs  track.rs  types.rs
crates/phx-intensity/: Cargo.toml
crates/phx-intensity/src/: lib.rs
crates/phx-pitch/: Cargo.toml
crates/phx-pitch/src/: acf.rs  candidates.rs  lib.rs  params.rs  path.rs  perf.rs  types.rs
crates/phx-playback/: Cargo.toml
crates/phx-playback/src/: backend.rs  buffer.rs  clock.rs  error.rs  lib.rs  mock.rs
crates/phx-playback/tests/: contract.rs  drift.rs
crates/phx-project/: Cargo.toml
crates/phx-project/src/: autosave.rs  container.rs  lib.rs  media.rs  model.rs  relink.rs  storage.rs  tests.rs
crates/phx-render/: Cargo.toml
crates/phx-render/src/: colormap.rs  (+3 more)
crates/phx-spectrogram/: Cargo.toml
crates/phx-textgrid/: Cargo.toml  LICENSE-MIT  README.md
crates/phx-textgrid/docs/: binary-format.md
crates/phx-textgrid/examples/: lab_to_textgrid.rs  reformat_textgrid.rs
crates/phx-textgrid/src/: binary.rs  encoding.rs  error.rs  lib.rs  reader.rs  tier_build.rs  writer.rs
crates/phx-textgrid/tests/: behavior.rs  fixtures.rs
crates/phx-voice/: Cargo.toml
crates/phx-voice/src/: lib.rs
crates/phx-wasm/: Cargo.toml
crates/phx-wasm/src/: lib.rs
docs/: DESIGN.md  demo.md
docs/formats/: praat-formats.md  project.md
docs/plan/: BRIEF.md  architecture.md  gates.md  horizon.md  naming.md  roadmap.md  ux.md  validation.md
docs/research/: algorithms-and-validation.md  besra.md  community-voices.md  design-lessons.md  owner-ideas.md  praat-capability-analysis.md  praat-capability-workflow.md  praat-features-and-pain-points.md  praat-shortcuts.md  rust-ecosystem.md  sample-corpus.md
docs/reviews/: codex-2026-07-17.md
samples/: MANIFEST.md  arctic_awb_a0001.TextGrid  arctic_ksp_a0001.TextGrid  arctic_slt_a0001.TextGrid  librispeech_2277-149896-0005.TextGrid
samples/scripts/: synth_vowel_breathy.py  synth_vowel_creaky.py
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/lib/: config.svelte.ts  project.svelte.ts
src/routes/: +layout.svelte  +page.svelte
tests/fixtures/: MANIFEST.md
tools/figcheck/: Dockerfile  check.sh  selftest.sh
tools/oracle/: generate_textgrid_binary_fixtures.py  pulse_times.py  pyproject.toml  resample_fixtures.py  spectrogram_reference.csv  spectrogram_reference.py
tools/oracle-bridge/: Cargo.toml
tools/oracle-bridge/src/: json.rs  main.rs
tools/oracle/references/: formant-defaults__arctic_bdl_a0001.json  formant-defaults__arctic_slt_a0001.json  formant-defaults__librispeech_2277-149896-0005.json  formant-defaults__synth_vowel_a.json  intensity-defaults__arctic_bdl_a0001.json  intensity-defaults__arctic_slt_a0001.json  intensity-defaults__librispeech_2277-149896-0005.json  intensity-defaults__synth_vowel_a.json  pitch-defaults__arctic_bdl_a0001.json  pitch-defaults__arctic_slt_a0001.json  pitch-defaults__librispeech_2277-149896-0005.json  pitch-defaults__synth_vowel_a.json  spectrogram-slice-defaults__synth_vowel_a.json  voice-report-defaults__arctic_bdl_a0001.json  voice-report-defaults__synth_vowel_a.json  voice-report-defaults__synth_vowel_perturbed.json
tools/oracle/src/oracle/: __init__.py  __main__.py  cases.py  cli.py  diff.py  jsonio.py  measures.py  params.py  paths.py  runner.py  tolerances.py
(+160 files in other folders)
