[package]
name = "phx-engine"
version = "0.0.1"
edition.workspace = true
license.workspace = true
description = "The one API both frontends and future bindings consume: commands with explicit arguments, journaled unified undo, content-addressed analysis cache"

[dependencies]
phx-audio = { workspace = true }
phx-dsp = { workspace = true }
phx-spectrogram = { workspace = true }
phx-pitch = { workspace = true }
phx-formant = { workspace = true }
phx-intensity = { workspace = true }
phx-voice = { workspace = true }
phx-annot = { workspace = true }
phx-render = { workspace = true }
phx-figure = { workspace = true }
serde = { workspace = true }

[features]
default = []
# Native-only figure exports. The PNG and PDF backends pull resvg / svg2pdf,
# which do not build for wasm; a native frontend enables these, the wasm build
# leaves them off and the web app rasterizes the SVG preview for PNG instead.
figure-raster = ["phx-figure/raster"]
figure-pdf = ["phx-figure/pdf"]

[dev-dependencies]
hound = { workspace = true }
