[package]
name = "phx-figure"
version = "0.0.1"
edition.workspace = true
license.workspace = true
description = "Backend-agnostic figure model; exporters: SVG, PDF (svg2pdf), PGFPlots/TikZ, Typst/CeTZ, Vega JSON, matplotlib/R/Julia code + data, GraphML"

[dependencies]
plotters = { version = "0.3.7", optional = true, default-features = false }
svg2pdf = { version = "0.13.0", optional = true }

[features]
backend-plotters = ["dep:plotters"]
backend-pdf = ["dep:svg2pdf"]
