[package]
name = "phx-textgrid"
version = "0.0.1"
edition.workspace = true
license.workspace = true
description = "Praat TextGrid read (long/short/binary text variants; UTF-8/UTF-16/Latin-1) and write (UTF-8 always)"

[dependencies]
phx-annot = { workspace = true }

[dev-dependencies]
phx-annot = { workspace = true }
