[package]
name = "phx-wasm"
version = "0.0.1"
edition.workspace = true
license.workspace = true
description = "wasm-bindgen bindings over phx-engine"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
phx-engine = { workspace = true }
phx-textgrid = { workspace = true }
phx-project = { workspace = true }
wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
