[project]
name = "oracle"
version = "0.1.0"
description = "Out-of-process Praat/parselmouth oracle for validation.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.6",
    "scipy>=1.17.1",
    "soundfile>=0.14.0",
]

[project.optional-dependencies]
# praat-parselmouth wraps Praat (GPLv3). It runs only inside this
# out-of-process dev tool and never enters a Rust crate's dependency tree
# (docs/plan/validation.md, docs/research/algorithms-and-validation.md §7.1).
parselmouth = [
    "praat-parselmouth>=0.4.3",
    "numpy>=1.26",
]

[project.scripts]
oracle = "oracle.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oracle"]
