[package]
name = "phonix-desktop"
version = "0.0.1"
description = "Phonia desktop shell: the shared UI over a native phx-engine core"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"

# The desktop app is its own workspace so the pure-Rust core crates never pull
# the WebKitGTK / wry dependency tree into their builds.
[workspace]

[lib]
name = "phonix_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
blake3 = "1"

phx-engine = { path = "../../../crates/phx-engine", features = ["figure-raster", "figure-pdf"] }
phx-project = { path = "../../../crates/phx-project" }
phx-textgrid = { path = "../../../crates/phx-textgrid" }
phx-audio = { path = "../../../crates/phx-audio" }
phx-playback = { path = "../../../crates/phx-playback", features = ["cpal-backend"] }

[features]
# Larger binary but the default Tauri custom-protocol path; enabled for release.
custom-protocol = ["tauri/custom-protocol"]

# cpal 0.18.1 declares independent version ranges for `windows` and its own
# direct `windows-core` dependency; the resolver satisfies them with two
# different windows-core versions, and cpal's #[windows::core::implement]
# macro then implements a trait from the wrong one on Windows
# (RustAudio/cpal#1242). The fix landed upstream in
# RustAudio/cpal#1244 but has not shipped in a crates.io release yet, so pull
# the fixed manifest straight from the same commit.
[patch.crates-io]
cpal = { git = "https://github.com/RustAudio/cpal", rev = "a62677dd811e39048e277e214fe22af75ecf6bf0" }
